// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EC - Description list Horizontal renders correctly 1`] = `
<test>
  <dl
    class="ecl-description-list ecl-description-list--horizontal"
  >
    <dt
      class="ecl-description-list__term"
    >
      European Commission
    </dt>
    <dd
      class="ecl-description-list__definition"
    >
      The executive body of the European Union formed in 1967, which initiates action in the EU and mediates between member governments. Former name (until 1993): Commission of the European Communities
    </dd>
    <dt
      class="ecl-description-list__term"
    >
      European Union
    </dt>
    <dd
      class="ecl-description-list__definition"
    >
      An association of European nations formed in 1993 for the purpose of achieving political and economic integration.
    </dd>
    <dt
      class="ecl-description-list__term"
    >
      Citizen
    </dt>
    <dd
      class="ecl-description-list__definition"
    >
      A native or naturalized member of a state or nation who owes allegiance to its government and is entitled to its protection
    </dd>
  </dl>
</test>
`;

exports[`EC - Description list Taxonomy renders correctly 1`] = `
<test>
  <dl
    class="ecl-description-list ecl-description-list--taxonomy"
  >
    <dt
      class="ecl-description-list__term"
    >
      Science areas
    </dt>
    <dd
      class="ecl-description-list__definition"
    >
      <span
        class="ecl-tag ecl-tag--display ecl-description-list__tag"
      >
        Energy and transport
      </span>
      <span
        class="ecl-tag ecl-tag--display ecl-description-list__tag"
      >
        Standards
      </span>
    </dd>
    <dt
      class="ecl-description-list__term"
    >
      Keywords
    </dt>
    <dd
      class="ecl-description-list__definition"
    >
      <span
        class="ecl-tag ecl-tag--display ecl-description-list__tag"
      >
        Electricity
      </span>
      <span
        class="ecl-tag ecl-tag--display ecl-description-list__tag"
      >
        Electromobility
      </span>
      <span
        class="ecl-tag ecl-tag--display ecl-description-list__tag"
      >
        Energy
      </span>
      <span
        class="ecl-tag ecl-tag--display ecl-description-list__tag"
      >
        Energy storage
      </span>
      <span
        class="ecl-tag ecl-tag--display ecl-description-list__tag"
      >
        Security
      </span>
      <span
        class="ecl-tag ecl-tag--display ecl-description-list__tag"
      >
        Transport
      </span>
      <span
        class="ecl-tag ecl-tag--display ecl-description-list__tag"
      >
        Low carbon
      </span>
    </dd>
  </dl>
</test>
`;

exports[`EC - Description list Vertical renders correctly 1`] = `
<test>
  <dl
    class="ecl-description-list"
  >
    <dt
      class="ecl-description-list__term"
    >
      European Commission
    </dt>
    <dd
      class="ecl-description-list__definition"
    >
      The executive body of the European Union formed in 1967, which initiates action in the EU and mediates between member governments. Former name (until 1993): Commission of the European Communities
    </dd>
    <dt
      class="ecl-description-list__term"
    >
      European Union
    </dt>
    <dt
      class="ecl-description-list__term"
    >
      EU
    </dt>
    <dd
      class="ecl-description-list__definition"
    >
      An association of European nations formed in 1993 for the purpose of achieving political and economic integration.
    </dd>
    <dt
      class="ecl-description-list__term"
    >
      Citizen
    </dt>
    <dd
      class="ecl-description-list__definition"
    >
      A native or naturalized member of a state or nation who owes allegiance to its government and is entitled to its protection
    </dd>
    <dd
      class="ecl-description-list__definition"
    >
      An inhabitant of a city or town, especially one entitled to its privileges or franchises.
    </dd>
  </dl>
</test>
`;

exports[`EC - Description list Vertical renders correctly with extra attributes 1`] = `
<test>
  <dl
    class="ecl-description-list"
    data-test="data-test-value"
    data-test-1="data-test-value-1"
  >
    <dt
      class="ecl-description-list__term"
    >
      European Commission
    </dt>
    <dd
      class="ecl-description-list__definition"
    >
      The executive body of the European Union formed in 1967, which initiates action in the EU and mediates between member governments. Former name (until 1993): Commission of the European Communities
    </dd>
    <dt
      class="ecl-description-list__term"
    >
      European Union
    </dt>
    <dt
      class="ecl-description-list__term"
    >
      EU
    </dt>
    <dd
      class="ecl-description-list__definition"
    >
      An association of European nations formed in 1993 for the purpose of achieving political and economic integration.
    </dd>
    <dt
      class="ecl-description-list__term"
    >
      Citizen
    </dt>
    <dd
      class="ecl-description-list__definition"
    >
      A native or naturalized member of a state or nation who owes allegiance to its government and is entitled to its protection
    </dd>
    <dd
      class="ecl-description-list__definition"
    >
      An inhabitant of a city or town, especially one entitled to its privileges or franchises.
    </dd>
  </dl>
</test>
`;

exports[`EC - Description list Vertical renders correctly with extra class names 1`] = `
<test>
  <dl
    class="ecl-description-list custom-class custom-class--test"
  >
    <dt
      class="ecl-description-list__term"
    >
      European Commission
    </dt>
    <dd
      class="ecl-description-list__definition"
    >
      The executive body of the European Union formed in 1967, which initiates action in the EU and mediates between member governments. Former name (until 1993): Commission of the European Communities
    </dd>
    <dt
      class="ecl-description-list__term"
    >
      European Union
    </dt>
    <dt
      class="ecl-description-list__term"
    >
      EU
    </dt>
    <dd
      class="ecl-description-list__definition"
    >
      An association of European nations formed in 1993 for the purpose of achieving political and economic integration.
    </dd>
    <dt
      class="ecl-description-list__term"
    >
      Citizen
    </dt>
    <dd
      class="ecl-description-list__definition"
    >
      A native or naturalized member of a state or nation who owes allegiance to its government and is entitled to its protection
    </dd>
    <dd
      class="ecl-description-list__definition"
    >
      An inhabitant of a city or town, especially one entitled to its privileges or franchises.
    </dd>
  </dl>
</test>
`;

exports[`EC - Description list Vertical with missing input data and debug enabled shows the right warning message 1`] = `
<test>
  <dl
    class="ecl-description-list"
  >
    <dt
      class="ecl-description-list__term"
    />
    <dt
      class="ecl-description-list__term"
    >
      EU
    </dt>
    <dd
      class="ecl-description-list__definition"
    >
      An association of European nations formed in 1993 for the purpose of achieving political and economic integration.
    </dd>
    <dt
      class="ecl-description-list__term"
    >
      Citizen
    </dt>
    <dd
      class="ecl-description-list__definition"
    />
    <dd
      class="ecl-description-list__definition"
    >
      An inhabitant of a city or town, especially one entitled to its privileges or franchises.
    </dd>
  </dl>
  <!-- ecl2-compliance: description-list -->
  <div
    class="ecl2-compliance ecl-u-border-width-1 ecl-u-border-color-red ecl-u-border-style-solid ecl-u-ma-xs ecl-u-pr-s ecl-u-bg-white"
  >
    <p
      class="ecl-u-type-color-grey ecl-u-ml-m ecl-u-type-xs"
    >
      [description-list] -  Every item in the {{ items }} array should contain a {{ term }} property set and filled in. Every sub-item in the {{ term }} array should have a value set. Every item in the {{ items }} array should contain a {{ definition }} property set and filled in. Every sub-item in the {{ definition }} array should have a value set.
    </p>
  </div>
</test>
`;
